update composer jsone file

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ Thumbs.db
 # composer itself is not needed
 composer.phar
 
+composer.lock
+
 # Mac DS_Store Files
 .DS_Store
 
@@ -25,3 +27,4 @@ composer.phar
 phpunit.phar
 # local phpunit config
 /phpunit.xml
+/.phpunit.result.cache
